# verify-bot

./: .gitignore  README.md  alembic.ini  installer.py  main.py  pyproject.toml  run.py  start.bat  start.cmd  start_linux.sh
.github/: FUNDING.yml
alembic/: env.py
alembic/versions/: 150c2d9e28a0_updated_colum.py  15e6bb672c97_add_closed_by_user_id_and_closed_at_.py  3c674cac2b92_role_id_column_to_verification_model.py  41d1ce433b5b_create_a_baseline_migrations.py  c560bcc6bdb3_add_new_fields_to_verifyusers_model.py  e1cb82327d9e_added_a_reason_field_to_the_report_.py  edfc46b2a597_make_bigint.py
config/: config.yml  embeds.yml
src/: bot.py
src/buttons/: reportButton.py  verifyButton.py
src/commands/general/: about.py  help.py  report.py  server.py  user.py
src/commands/moderator/: ban.py  verify.py
src/commands/owner/: mention.py
src/events/: autoban.py  guildMemberAdd.py  guildMemberRemove.py  messageCreate.py  ready.py
src/modals/: reportModals.py
src/module/: __init__.py  database.py  emled.py  models.py  types.py  utils.py  yml.py
