[tool.poetry]
name = "verifybot"
version = "0.1.0"
description = "Бот верификации, который верифицирует пользователя."
authors = ["StarStudio <charlottewiltshire27@outlook.com>"]
license = "All rights reserved"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.9.2"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
tqdm = "^4.66.5"
httpx = "^0.27.0"
pymongo = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
