[tool.poetry]
name = "verifybot"
version = "0.1.0"
description = "Бот верификации, который верифицирует пользователя."
authors = ["StarStudio <charlottewiltshire27@outlook.com>"]
license = "All rights reserved"
readme = "README.md"
repository = "https://github.com/charlottewiltshire0/verify-bot"

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.9.2"
pyyaml = "^6.0.1"
loguru = "^0.7.2"
httpx = "^0.27.0"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
